fix footer issue on smaller screens

--- a/word-search/src/styles/puzzle.module.scss
+++ b/word-search/src/styles/puzzle.module.scss
@@ -91,7 +91,7 @@
   flex-direction: column;
   min-height: calc(100vh - 64px);
   height: max-content;
-  width: 100%;
+  min-width: 100%;
 }
 
 .createPuzzle {
@@ -312,7 +312,7 @@ a:hover {
 .footer {
   background-color: #041e42;
   height: 32px;
-  width: 100%;
+  min-width: 100%;
   display: flex;
   justify-content: space-around;
   align-items: center;
@@ -325,4 +325,20 @@ a:hover {
   a:hover {
     color: #ffb81c;
   }
+}
+
+.landingPage {
+  display: flex;
+  flex-direction: row;
+  width: 100%;
+  height: 100%;
+}
+
+.one {
+  background-color: white;
+  width: 33.33%;
+  border: 1px solid black;
+  display: flex;
+  flex-direction: column;
+  text-align: center;
 }
